# symphony

./: .gitignore  INSTALL.md  README.md  config.yaml  install-internal-clis.sh  install.sh  pyproject.toml  render_shots.py  run_demo.py  run_tui_demo.py  setup.py
data/: config.toml.example
data/sop_templates/: 全链路创建新表.json  全链路加字段.json
pi-agent/: AGENTS.md
src/symphony/: __init__.py  cli.py  config.py
symphony/: __init__.py  cli.py
symphony/config/: settings.py  user_config.py
symphony/core/: event_bus.py  event_log.py  llm_provider.py  pi_bridge.py  pi_pool.py  task_manager.py
symphony/sop/: artifact.py  human_loop.py  retry.py  schema_validator.py  sop_definition.py  sop_executor.py  sop_registry.py
symphony/tui/: native_tui.py  symphony_tui.ts
symphony/web/: server.py
tests/: conftest.py  test_adhoc_and_redirect.py  test_api_routes.py  test_artifact.py  test_cli.py  test_config.py  test_event_bus.py  test_event_log.py  test_human_loop.py  test_native_tui_streaming.py  test_pi_bridge.py  test_retry.py  test_schema_validator.py  test_sop_definition.py  test_sop_executor.py  test_task_manager.py  test_user_config.py  test_ws_manager.py
tests/agent/: test_chat_events.py  test_chat_runtime.py  test_chat_session.py  test_context_compression.py  test_events.py  test_interactions.py  test_runtime.py  test_tools.py
tests/ai/: test_doubao.py  test_doubao_stream.py  test_schema.py
tests/e2e/: test_smoke.py
tests/server/: test_api.py  (+7 more)
web/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+120 files in other folders)
