[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symphony"
version = "0.1.0"
description = "SOP-based multi-agent task orchestrator with TUI and Web UI, built on top of pi agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Symphony Team" }]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "click>=8.1",
    "aiohttp>=3.9",
    "jsonschema>=4.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "httpx>=0.27",
    "tomli-w>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "httpx>=0.27",
    "tomli-w>=1.0",
]

[project.scripts]
symphony = "symphony.cli:main"
Symphony = "symphony.cli:main"
adseek = "symphony.cli:main"
Adseek = "symphony.cli:main"
ADSeek = "symphony.cli:main"
ADSEEK = "symphony.cli:main"
adSeek = "symphony.cli:main"

[tool.setuptools.packages.find]
include = ["symphony*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
